force-app/main/default/objects/OA_Communication_Preference__c/OA_Communication_Preference__c.object-meta.xml
<CustomObject>
    <description>Current effective communication preference state for Phase 1 email unsubscribe handling.</description>
    <label>OA Communication Preference</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Communication Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OA Communication Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>