force-app/main/default/objects/OA_Communication_Preference__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign context for campaign-specific unsubscribe preferences.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Communication Preferences</relationshipLabel>
    <relationshipName>OA_Comm_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>