force-app/main/default/objects/OA_Communication_Preference__c/fields/CampaignMember__c.field-meta.xml
<CustomField>
    <fullName>CampaignMember__c</fullName>
    <description>CampaignMember Id affected by this campaign-specific preference. Stored as text because CampaignMember is not a valid custom lookup target.</description>
    <label>Campaign Member</label>
    <length>18</length>
    <type>Text</type>
</CustomField>