force-app/main/default/objects/OA_Communication_Preference__c/fields/Effective_At__c.field-meta.xml
<CustomField>
    <fullName>Effective_At__c</fullName>
    <description>Date and time when the current preference became effective.</description>
    <label>Effective At</label>
    <type>DateTime</type>
</CustomField>