force-app/main/default/objects/OA_Communication_Preference__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address snapshot used when the preference was established.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>