force-app/main/default/objects/OA_Communication_Preference__c/fields/Last_Event_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_At__c</fullName>
    <description>Date and time of the most recent preference event.</description>
    <label>Last Event At</label>
    <type>DateTime</type>
</CustomField>