force-app/main/default/objects/OA_Communication_Preference__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead whose email preference is represented by this record. Phase 1 is Lead-only.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Communication Preferences</relationshipLabel>
    <relationshipName>OA_Comm_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>