force-app/main/default/objects/OA_Communication_Preference__c/fields/Normalized_Email__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Email__c</fullName>
    <description>Lowercase trimmed email used for matching and future migration to Contact Point records.</description>
    <externalId>true</externalId>
    <label>Normalized Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>