force-app/main/default/objects/OA_Communication_Preference__c/fields/Preference_Key__c.field-meta.xml
<CustomField>
    <fullName>Preference_Key__c</fullName>
    <description>Unique deterministic key used for idempotent preference upsert.</description>
    <externalId>true</externalId>
    <label>Preference Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>