force-app/main/default/objects/OA_Communication_Preference__c/fields/Preference_Status__c.field-meta.xml
<CustomField>
    <fullName>Preference_Status__c</fullName>
    <description>Current effective preference status for this channel and scope.</description>
    <label>Preference Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscribed</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
                <default>true</default>
                <label>Unsubscribed</label>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>