force-app/main/default/objects/OA_Communication_Preference__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Preference scope. Phase 1 uses Campaign and records global opt-out on Lead.HasOptedOutOfEmail.</description>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign</fullName>
                <default>true</default>
                <label>Campaign</label>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>